Nop bai tap buoi 10

--- a/HTML-CSS-FINAL/index.html
+++ b/HTML-CSS-FINAL/index.html
@@ -74,7 +74,7 @@
         <!-- Main -->
         <main>
             <!-- * * * * Hero Section ✅✅✅ * * * * -->
-            <section class="hero border-test">
+            <section class="hero">
                 <!-- Hero Section Frame -->
                 <div class="container">
 
@@ -141,7 +141,7 @@
             </section>
 
             <!-- * * * * Trending Collection ✅✅✅ * * * * -->
-            <section class="trending border-test"  >
+            <section class="trending"  >
                 <!-- Trending Collection Frame -->
                 <div class="container">
 
@@ -238,7 +238,7 @@
             </section>
 
             <!-- * * * * Top creators ✅✅✅ * * * * -->
-            <section class="top-creators border-test">
+            <section class="top-creators">
                 <!-- Top Rated Artists Frame -->
                 <div class="container">
                     <!-- Section Headline & Button -->
@@ -425,7 +425,7 @@
             </section>
 
             <!-- * * * * Browse Categories ✅✅✅ * * * * -->
-            <section class="browse-categories border-test">
+            <section class="browse-categories">
                 <!-- Browse Categories Frame -->
                 <div class="container">
                     <!-- Section Headline -->
@@ -532,7 +532,7 @@
             </section>
 
             <!-- * * * * Discover More NFTs ✅✅✅ * * * * -->
-            <section class="discover border-test">
+            <section class="discover">
                 <!-- Discover More NFTs Frame-->
                 <div class="container">
                     <!-- Section Headline & Button-->
@@ -633,7 +633,7 @@
             </section>
 
             <!-- * * * * Magic Mashrooms (NFT Highlight) ✅✅✅ * * * *-->
-            <section class="magic border-test">
+            <section class="magic">
                 <!-- NFT Highlight Frame-->
                 <div class="container">
                         <div class="overlay"></div>
@@ -688,7 +688,7 @@
             </section>
 
             <!-- * * * * How it works ✅✅✅ * * * * -->
-            <section class="works border-test">
+            <section class="works">
                 <!-- Discover More NFTs Frame-->
                 <div class="container">
 
@@ -732,7 +732,7 @@
             </section>
 
             <!-- * * * * Join our weekly digest ✅✅✅ * * * * -->
-            <section class="join border-test">
+            <section class="join">
                 <!--Subscribe Widget Frame -->
                 <div class="container">
                     <form class="join-frame">
@@ -766,7 +766,7 @@
                 </div>
             </section>
         </main>
-        <!-- Footer ✅✅ -->
+        <!-- Footer ✅✅✅ -->
         <footer>
             <div class="container">
                 <div class="footer-frame">
